# newsreport

./: .gitignore  README.md  pyproject.toml
.github/workflows/: daily-digest.yml
config/: digest.example.json  editor-note.txt  sample-calendar.json
daily_digest/: __init__.py  cli.py  clustering.py  config.py  llm.py  models.py  pipeline.py  render.py  selection.py  text.py  usage.py
daily_digest/fetch/: __init__.py  discovery.py  rss.py
daily_digest/modules/: __init__.py  registry.py
scripts/: run_daily_digest.sh
tests/: test_clustering.py  test_render.py  test_rss.py  test_usage.py
