[project]
name = "personal-daily-digest"
version = "0.1.0"
description = "Config-driven unattended daily digest pipeline with deterministic fetch/dedupe and scoped LLM synthesis."
requires-python = ">=3.9"
dependencies = []

[project.scripts]
daily-digest = "daily_digest.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
